kpi ID validation,payitems upload duplication error, past payroll reports